--- a/src/makefile.corpus
+++ b/src/makefile.corpus
@@ -33,7 +33,7 @@ $(DP)/opts$F: $(DP)/l2so$F
 $(DP)/l2so$F: $(LATEX) $(SLTS) $(OPTS) slts.awk opts.sed latex.sed $(DP)/PostsToTitles$F
 
 $(DP): | $(DD)
-	echo "***** creating directory $(DP)"
+	@echo "***** creating directory $(DP)"
 	mkdir $(DP)
 
 $(DP)/slts_2010$F: $(SLTS)/*.tsv $(OPTS)/*.tsv slts.sed slts.awk errors.awk | $(DP) # $(DP)/PostsToTitles$F
@@ -41,7 +41,7 @@ $(DP)/slts_2010$F: $(SLTS)/*.tsv $(OPTS)/*.tsv slts.sed slts.awk errors.awk | $(
 	# input format: id post_id thread_id type comment_id old_visual_id visual_id issue formula, sorted numerically by id
 	echo "id	post_id	thread_id	type	comment_id	visual_id	formula	year" >header
 	for f in $(LATEX)/*.tsv; do \
-	  echo $$(basename $$f) ; \
+	  @echo $$(basename $$f) ; \
 	  cat $$f | sed '1d;s/\r//g' | sed -f latex.sed | tr -d "\n" | tr '\a' '\n' | sort >l2s1 ; \
 	  cat $(SLTS)/$$(basename $$f) \
 	  	| sed '1d;s/\r//g' | awk -f slts.awk | sort | join -t '	' - l2s1 > l2s2 ; \
@@ -52,7 +52,7 @@ $(DP)/slts_2010$F: $(SLTS)/*.tsv $(OPTS)/*.tsv slts.sed slts.awk errors.awk | $(
 	  sort -t '	' -k 3,3 l2s2 > l2s3 ; \
 	  gunzip -c $(DP)/PostsToTitles$F | join -t '	' -1 3 -o 1.1,1.2,1.3,1.4,1.5,1.6,1.7,2.2 l2s3 - >>slts ; \
 	  done
-	echo "sorting"
+	@echo "sorting"
 	sort -t '	' -k 8,8 -k 3,3n -k 2,2n -k 1,1n <slts | cat header - | gzip -c >$(DP)/slts$F
 	sort -t '	' -k 8,8 -k 3,3n -k 2,2n -k 1,1n <opts | cat header - | gzip -c >$(DP)/opts$F
 	sort -u -t "	" <l2s | gzip -c >$(DP)/l2so$F
