--- a/src/makefile.corpus
+++ b/src/makefile.corpus
@@ -1,10 +1,10 @@
 # makefile to create the corpus of HTML documents to be indexed
 
-all_corpus: corpus
+all_corpus:  corpus-task1
 
 include makefile.base
 
-CY = 2024
+CY = 2025
 
 R = representation_v3
 FORMULAS = $(DO)
@@ -23,38 +23,33 @@ F = .tsv.gz
  
 # ------------------ PREPRO ------------------
 # To preserve the header and work with the rest: command | (read -r; printf "%s\n" "$REPLY"; sort)
-$(DP)/l2so$F: $(DP)/slts$F
-	# l2so tavle: no header[latex, slt, vid, opt], ordered by (unique) latex
 
-$(DP)/opts$F: $(DP)/slts$F
-	# opts table: id post_id thread_id type comment_id visual_id formula year, sorted numerically by year, thread_id, post_id, id
+$(DP)/AN: $(LATEX) $(SLTS) $(OPTS) slts.awk opts.sed latex.sed $(MT)/mathtuples/convert.py | $(DP) mathtuples
+	# input format: id post_id thread_id type comment_id old_visual_id visual_id issue formula, sorted numerically by id
+	for f in $(LATEX)/*.tsv; do \
+	  echo $$(basename $$f) ; \
+	  cat $$f | sed '1d;s/\r//g' | sed -f latex.sed | tr -d '\n' | tr '\a' '\n' | cut -f 1,7,9 | sort >l2s1 ; \
+	  cat $(SLTS)/$$(basename $$f) \
+	  	| sed '1d;s/\r//g' | awk -f slts.awk | sort | join -t '	' -o 1.1,1.2,1.3,2.7 l2s1 - > l2s2 ; \
+	  cat $(OPTS)/$$(basename $$f) \
+	  	| sed '1d;s/\r//g' | sed -f opts.sed | cut -f 1,9 | sort | join -t '	' -o 1.3,1.2,1.4,2.2  l2s2 - \
+		| sort -u -t "	" \
+		| sed "s/<\/math>	<math/<\/math>	<omath/"  \
+		| python3 -m mathtuples.convert --context  \
+		| sed "s/<omath/<math/" \
+		| python3 -m mathtuples.convert --context --ignore-slt --opt \
+		| python3 save_formulas.py -A $(DP)/AN -N $(DP)/NAN ; \
+	  done
+	rm l2s?
+	# AN and NAN tables:  latex -> [vid, slt, opt]
+	# took 65 hourse to create Jan 2025, try changing to > 20 files instead (using hash?)
 
+mathtuples: 
+	ln -s $(MT)/mathtuples mathtuples
 
 $(DP): | $(DD)
 	@echo "***** creating directory $(DP)"
 	mkdir $(DP)
-
-$(DP)/slts$F: $(LATEX) $(SLTS) $(OPTS) slts.awk opts.sed latex.sed $(DP)/PostsToTitles$F | $(DP)
-	# input format: id post_id thread_id type comment_id old_visual_id visual_id issue formula, sorted numerically by id
-	echo "id	post_id	thread_id	type	comment_id	visual_id	formula	year" >header
-	for f in $(LATEX)/*.tsv; do \
-	  @echo $$(basename $$f) ; \
-	  cat $$f | sed '1d;s/\r//g' | sed -f latex.sed | tr -d "\n" | tr '\a' '\n' | sort >l2s1 ; \
-	  cat $(SLTS)/$$(basename $$f) \
-	  	| sed '1d;s/\r//g' | awk -f slts.awk | sort | join -t '	' - l2s1 > l2s2 ; \
-	  cat $(OPTS)/$$(basename $$f) \
-	  	| sed '1d;s/\r//g' | sed -f opts.sed | sort | join -t '	' - l2s2 -o 1.1,1.2,1.3,1.4,1.5,2.8,2.7,1.7,1.9 | sort -t '	' -k 3,3 > l2s3 ; \
-	  cat l2s3 | sed 's/^.*	\([^	]*	[^	]*	[^	]*	[^	]*\)$$/\1/' >> l2s ; \
-	  gunzip -c $(DP)/PostsToTitles$F | join -t '	' -1 3 -o 1.1,1.2,1.3,1.4,1.5,1.8,1.9,2.2 l2s3 - >>opts ; \
-	  sort -t '	' -k 3,3 l2s2 > l2s3 ; \
-	  gunzip -c $(DP)/PostsToTitles$F | join -t '	' -1 3 -o 1.1,1.2,1.3,1.4,1.5,1.6,1.7,2.2 l2s3 - >>slts ; \
-	  done
-	@echo "sorting"
-	sort -t '	' -k 8,8 -k 3,3n -k 2,2n -k 1,1n <slts | cat header - | gzip -c >$(DP)/slts$F
-	sort -t '	' -k 8,8 -k 3,3n -k 2,2n -k 1,1n <opts | cat header - | gzip -c >$(DP)/opts$F
-	sort -u -t "	" <l2s | grep "[^	]*[a-zA-Z] | gzip -c >$(DP)/l2so$F
-	rm l2s l2s1 l2s2 l2s3 slts opts header
-	# slts table: id post_id thread_id type comment_id visual_id formula year, sorted numerically by year, thread_id, post_id, id
 
 $(DP)/APosts$F: $(DP)/QPosts$F
 	# APosts table: Qid Year Aid Body, sorted numerically by Year, Qid, Aid
@@ -83,25 +78,20 @@ $(DP)/Comments$F: $(COMMENTS) $(OLDCOMMENTS) collections.sed comments.awk fields
 	rm Comments
 	# Comments table: PostId Qid Year CommentId Text, sorted numerically by Year, Qid, PostId, CommentId
 
-$(DP)/Related$F: $(LINKS) collections.sed related.awk fields.awk $(DP)/slts$F  titles.awk $(DP)/PostsToTitles$F
-	gunzip -c $(DP)/slts$F | grep -h "	title	"  > pmml
-	gunzip -c $(DP)/opts$F | grep -h "	title	"  > cmml
-	gunzip -c $(DP)/PostsToTitles$F >PostsToTitles
+$(DP)/Related$F: $(LINKS) collections.sed related.awk fields.awk $(DP)/PostsToTitles$F
 	gunzip -c $(LINKS) \
 		| sed -f collections.sed | sort -t '	' -k3,3 -k4,4 -k5,5r | awk -f <(cat fields.awk related.awk ) \
-		| join -t '	' -1 2 -o 1.1,1.2,1.3,2.3 - PostsToTitles \
+		| join -t '	' -1 2 -o 1.1,1.2,1.3,2.3 - <(gunzip -c $(DP)/PostsToTitles$F) \
 		| sort -t '	' -k 1,1 \
-		| join -t '	' -o 1.1,2.2,1.2,1.3,1.4 - PostsToTitles \
-		| awk -f titles.awk | sort -t '	' -k 2,2n -k 1,1n -k 4,4n | cat <( echo "Qid	Year	PostId	LinkType	Title") - | gzip -c >$(DP)/Related$F
-	rm PostsToTitles pmml cmml
+		| join -t '	' -o 1.1,2.2,1.2,1.3,1.4 - <(gunzip -c $(DP)/PostsToTitles$F) \
+		| sort -t '	' -k 2,2n -k 1,1n -k 4,4n | cat <( echo "Qid	Year	PostId	LinkType	Title") - | gzip -c >$(DP)/Related$F
 	# Related table: Qid Year PostId LinkType Title, sorted numerically by Year, Qid, LinkType, 
 
 # ------------------ CORPUS  ------------------
-$(DP)/task1_$(CY)_corpus_2010.xml.gz: generate_corpus.py $(DP)/QPosts$F $(DP)/Comments$F $(DP)/Related$F template_minimal_v3.html
-	#cat $(DP)/trial | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S slts -L l2so -o $(DP)
-	gunzip -c $(DP)/QPosts$F | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S slts -L l2so -o $(DP)
-	#gunzip -c $(DP)/QPosts$F | grep "^[^	]*	\(Year\|2015\)	" | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S slts -L l2so -o $(DP)
-	#gunzip -c $(DP)/QPosts$F | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S slts -O opts -L l2so -o $(DP)
+$(DP)/task1_$(CY)_corpus_2010.xml.gz: generate_corpus.py $(DP)/QPosts$F $(DP)/Comments$F $(DP)/Related$F $(DP)/AN template_minimal_v3.html
+	#cat $(DP)/trial | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S -O -o $(DP) -y $(CY)
+	gunzip -c $(DP)/QPosts$F | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S -O -y $(CY) -o $(DP)
+	#gunzip -c $(DP)/QPosts$F | grep "^[^	]*	\(Year\|2015\)	" | python3 generate_corpus.py -i $(DP) -A APosts -C Comments -R Related -S -O -y $(CY) -o $(DP)
 
 $(DP)/task2_$(CY)_data.xml.gz:  $(DP)/slts$F task2_corpus.awk
 	cat $(DP)/slts$F | gunzip -c | awk -f task2_corpus.awk | gzip > $(DP)/task2_$(CY)_data.xml.gz
@@ -111,4 +101,3 @@ corpus-task1: $(DP)/task1_$(CY)_corpus_2010.xml.gz
 corpus-task2: $(DP)/task2_$(CY)_data.xml.gz
 
 corpus: corpus-task1 corpus-task2
-
