--- a/src/makefile.query
+++ b/src/makefile.query
@@ -1,14 +1,17 @@
 # makefile to run queries and eval for ARQMath-3.  To run things in parallel run: make -j #
 
+main-task: eval-task1
+
 all_query: query
 
 include makefile.base
 
-S = -s23
+trees = SO
+S = -s25-$(trees)
 alpha = 18
 alpha2 = 40
 loc = 8
-IY = 2024
+IY = 2025
 
 # ------------------ SELECT ------------------
 $(DR): | $(DD)
@@ -45,45 +48,79 @@ stopwords-mathstem.txt: stopwords.txt keywords.txt unicode2ascii.py
 	> stopwords-mathstem.txt
 
 # ------------------ QUERY ------------------
-topics: $(DP)/topics-task1$S-2020.txt $(DP)/topics-task1$S-2021.txt $(DP)/topics-task1$S-2022.txt \
-	$(DP)/topics-task2$S-2020.txt $(DP)/topics-task2$S-2021.txt $(DP)/topics-task2$S-2022.txt
+topics: $(DP)/topics-task1$S-2020.txt $(DP)/topics-task1$S-2021.txt $(DP)/topics-task1$S-2022.txt
+	# $(DP)/topics-task2$S-2020.txt $(DP)/topics-task2$S-2021.txt $(DP)/topics-task2$S-2022.txt
 
-$(DP)/topics-task1$S-2020.txt $(DP)/topics-task2$S-2020.txt: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml task1.awk \
-	$(DO)/Topics_V1.1.xml task2.awk $(MT)/mathtuples/convert.py | $(DP)
-	cat $(DO)/Formula_topics_latex_V2.0.tsv <(echo "\n") $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml \
-		| tr -d "\r" | awk -f task1.awk \
-		| python3 $(MT)/mathtuples/convert.py --context \
+$(DP)/formulas-20.tsv: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Formula_topics_opt_V2.0.tsv \
+	formulas.awk $(MT)/mathtuples/convert.py | $(DP) mathtuples
+	cat $(DO)/Formula_topics_latex_V2.0.tsv <(echo "\n") | sed '1d;s/\r//gi;s/  *$$//;s/\$$//g;s/&amp;/\&/g;s/&gt;/>/g;s/&lt;/</g' | sort | cut -f 1,5 >t 
+	cat $(DO)/Formula_topics_slt_V2.0.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		| python3 -m mathtuples.convert --context  | sort | join -t '	' t - > t2
+	cat $(DO)/Formula_topics_opt_V2.0.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		 | python3 -m mathtuples.convert --context | sort | join -t '	' t2 - > $(DP)/formulas-20.tsv
+	rm t t2
+	# formula table:  fid, latex, slt, opt ordered lexicographically
+
+$(DP)/formulas-21.tsv: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_2021_Formulas_OPT_V1.1.tsv \
+	formulas.awk $(MT)/mathtuples/convert.py | $(DP) mathtuples
+	cat $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv <(echo "\n") | sed '1d;s/\r//gi;s/  *$$//;s/\$$//g;s/&amp;/\&/g;s/&gt;/>/g;s/&lt;/</g' | sort | cut -f 1,5 >t 
+	cat $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		| python3 -m mathtuples.convert --context  | sort | join -t '	' t - > t2
+	cat $(DO)/Topics_2021_Formulas_OPT_V1.1.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		 | python3 -m mathtuples.convert --context -O -I  | sort | join -t '	' t2 - > $(DP)/formulas-21.tsv
+	rm t t2
+	# formula table:  fid, latex, slt, opt ordered lexicographically
+
+
+$(DP)/formulas-22.tsv: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Formulas_OPT.V0.1.tsv \
+	formulas.awk $(MT)/mathtuples/convert.py | $(DP) mathtuples
+	cat $(DO)/Topics_Formulas_Latex.V0.1.tsv <(echo "\n") | sed '1d;s/\r//gi;s/  *$$//;s/\$$//g;s/&amp;/\&/g;s/&gt;/>/g;s/&lt;/</g' | sort | cut -f 1,5 >t 
+	cat $(DO)/Topics_Formulas_SLT.V0.1.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		| python3 -m mathtuples.convert --context  | sort | join -t '	' t - > t2
+	cat $(DO)/Topics_Formulas_OPT.V0.1.tsv | sed '1d;s/\r//g' | awk -f formulas.awk \
+		 | python3 -m mathtuples.convert --context -O -I  | sort | join -t '	' t2 - > $(DP)/formulas-22.tsv
+	rm t t2
+	# formula table:  fid, latex, slt, opt ordered lexicographically
+
+$(DP)/topics-task1$S-2020.txt: $(DP)/formulas-20.tsv  $(DO)/Topics_V2.0.xml task1.awk
+	cat $(DP)/formulas-20.tsv  $(DO)/Topics_V2.0.xml  \
+		| tr -d "\r" | awk -f task1.awk trees=$(trees) \
 		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
 		> $(DP)/topics-task1$S-2020.txt
+
+$(DP)/topics-task1$S-2021.txt: $(DP)/formulas-21.tsv  $(DO)/Topics_Task1_2021_V1.1.xml task1.awk
+	cat $(DP)/formulas-21.tsv  $(DO)/Topics_Task1_2021_V1.1.xml  \
+		| tr -d "\r" | awk -f task1.awk trees=$(trees) \
+		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
+		> $(DP)/topics-task1$S-2021.txt
+
+$(DP)/topics-task1$S-2022.txt: $(DP)/formulas-22.tsv  $(DO)/Topics_Task1_2022_V0.1.xml task1.awk
+	cat $(DP)/formulas-22.tsv  $(DO)/Topics_Task1_2022_V0.1.xml  \
+		| tr -d "\r" | awk -f task1.awk trees=$(trees) \
+		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
+		> $(DP)/topics-task1$S-2022.txt
+
+$(DP)/topics-task2$S-2020.txt: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml task1.awk \
+	$(DO)/Topics_V1.1.xml task2.awk $(MT)/mathtuples/convert.py | $(DP)
 	cat $(DO)/Topics_V1.1.xml | awk -f task2.awk \
 		| python3 latex_filter_stopwords.py -tsv inline \
-		| python3 $(MT)/mathtuples/convert.py --context \
+		| python3 $(MT)/mathtuples/convert.py $(trees) --context \
 		> $(DP)/topics-task2$S-2020.txt
 	rm forms
 
-test $(DP)/topics-task1$S-2021.txt $(DP)/topics-task2$S-2021.txt: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml task1.awk \
+$(DP)/topics-task2$S-2021.txt: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml task1.awk \
 	$(DO)/Topics_Task2_2021_V1.1.xml task2.awk $(MT)/mathtuples/convert.py | $(DP)
-	cat $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml \
-		| tr -d "\r" | awk -f task1.awk \
-		| python3 $(MT)/mathtuples/convert.py --context \
-		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
-		> $(DP)/topics-task1$S-2021.txt
 	cat $(DO)/Topics_Task2_2021_V1.1.xml | awk -f task2.awk \
 		| python3 latex_filter_stopwords.py -tsv inline \
-		| python3 $(MT)/mathtuples/convert.py --context \
+		| python3 $(MT)/mathtuples/convert.py $(trees) --context \
 		> $(DP)/topics-task2$S-2021.txt
 	rm forms
 
-$(DP)/topics-task1$S-2022.txt $(DP)/topics-task2$S-2022.txt: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022_V0.1.xml task1.awk \
+$(DP)/topics-task2$S-2022.txt: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022.V0.1.xml task1.awk \
 	$(DO)/Topics_Task2_2022_V0.1.xml task2.awk $(MT)/mathtuples/convert.py | $(DP)
-	cat $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022_V0.1.xml \
-		| tr -d "\r" | awk -f task1.awk \
-		| python3 $(MT)/mathtuples/convert.py --context \
-		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
-		> $(DP)/topics-task1$S-2022.txt
 	cat $(DO)/Topics_Task2_2022_V0.1.xml | awk -f task2.awk \
 		| python3 latex_filter_stopwords.py -tsv inline \
-		| python3 $(MT)/mathtuples/convert.py --context \
+		| python3 $(MT)/mathtuples/convert.py $(trees) --context \
 		> $(DP)/topics-task2$S-2022.txt
 	rm forms
 
@@ -91,7 +128,7 @@ $(DP)/judged-query-names.txt: $(DO)/qrel_* | $(DP)
 	cat $(DO)/qrel_* | awk '{print $$1}' | sort -u > $(DP)/judged-query-names.txt
 
 # ------------------ TASK 1 ------------------
-$(DR)/trec-task1$S-all.tsv: $(DP)/topics-task1$S-2020.txt $(DP)/topics-task1$S-2021.txt $(DP)/topics-task1$S-2022.txt \
+$(DR)/trec-task1$S-all.tsv: topics \
     $(DP)/judged-query-names.txt $(DI)/task1_$(IY)_L$(loc).mindex.meta $(MS) $(MS)/msearch.exe $(MS)/mtokenize.exe \
     $(DP)/keepwords.txt $(DP)/stopwords.txt keywords/keepwords.txt unicode2ascii.py | $(DR)
 	time cat $(DP)/topics-task1$S-*.txt \
@@ -132,7 +169,7 @@ $(TE)/trec_eval:
 .PRECIOUS: $(TE)/trec_eval
 
 eval-task1-%: $(DR)/trec-task1$S-all.tsv $(TE)/trec_eval
-	echo task1 2020, 2021, 2022, alpha=0.$(alpha), loc=$(loc) > $(DR)/trec-task1-scores.txt ; \
+	echo task1 2020, 2021, 2022, alpha=0.$(alpha), loc=$(loc), trees=$(trees) >> $(DR)/trec-task1-scores.txt ; \
 	$(TE)/trec_eval -q -l2 -m num_q -m ndcg -m P.10 -m map -J $(DO)/qrel_official_task1 $(DR)/trec-task1$S-all.tsv >> $(DR)/trec-task1-scores.txt  ; \
 	$(TE)/trec_eval -q  -l2 -m num_q -m ndcg -m P.10 -m map -J $(DO)/qrel_task1_2021_test.tsv $(DR)/trec-task1$S-all.tsv >> $(DR)/trec-task1-scores.txt  ; \
 	$(TE)/trec_eval -q -l2 -m num_q -m ndcg -m P.10 -m map -J $(DO)/qrel_task1_2022_official.tsv $(DR)/trec-task1$S-all.tsv >> $(DR)/trec-task1-scores.txt ; \
@@ -191,3 +228,18 @@ eval-task1small: $(DR)/trec-task1small-all.tsv $(TE)/trec_eval
 	$(TE)/trec_eval -l2 -m num_q -m ndcg -m P.10 -m map -J $(DO)/qrel_task1_2021_test.tsv $(DR)/trec-task1small-all.tsv; \
 	$(TE)/trec_eval -l2 -m num_q -m ndcg -m P.10 -m map -J $(DO)/qrel_task1_2022_official.tsv $(DR)/trec-task1small-all.tsv
 
+PL = visualize
+D1 = keywords
+D2 = keepwords
+qrel = qrel_task1_2022_official
+
+anal-2022: $(DO)/$(qrel).tsv scores.awk $(DR)/scores-$(D1).txt $(DR)/task1-$(D1).tsv $(DR)/scores-$(D2).txt $(DR)/task1-$(D2).tsv
+	echo "run	topic	ndcg	map	p10" > head
+	awk -f scores.awk <$(DR)/scores-$(D1).txt | sed "1,/A.300/d;/all/d;s/^/$(D1)	/" | cat head - >$(PL)/scores.tsv
+	awk -f scores.awk <$(DR)/scores-$(D2).txt | sed "1,/A.300/d;/all/d;s/^/$(D2)	/"  >>$(PL)/scores.tsv
+	echo "run	topic	aid	pos	rel	bm25" > head
+	cut -f 1,3,4 <$(DO)/$(qrel).tsv | sed "s/	/ /;s/\r//g" | sort > qrel.tsv
+	cut -f 1,3,4,5 <$(DR)/task1-$(D1).tsv | sed "s/	/ /" | sort | join -t "	" -o 1.1,2.2,1.2,2.3 qrel.tsv - | sed "s/ /	/;s/^/$(D1)	/" | sort -t "	" -k 2,2 -k 4,4n | cat head - >$(PL)/runs.tsv
+	cut -f 1,3,4,5 <$(DR)/task1-$(D2).tsv | sed "s/	/ /" | sort | join -t "	" -o 1.1,2.2,1.2,2.3 qrel.tsv - | sed "s/ /	/;s/^/$(D2)	/" | sort -t "	" -k 2,2 -k 4,4n >>$(PL)/runs.tsv
+	cut -f 2,3,5 $(PL)/runs.tsv | sort -u | comm -23 qrel.tsv - | sort -k 1,1 -k3,3nr | awk -f unfound.awk >$(PL)/unfound.tsv
+	rm head qrel.tsv
